[project]
name="carafe"
version="1.6.0"
authors=[{name="Jelmer van Arnhem"}]
description="carafe is a tiny management tool for wine bottles/carafes"
license={text="MIT"}
requires-python=">=3.5"
[tool.setuptools]
include-package-data=true
[project.urls]
Repository="https://github.com/Jelmerro/carafe"
[project.scripts]
carafe="carafe:main"
